--- a/css/sassquatch.css
+++ b/css/sassquatch.css
@@ -361,7 +361,7 @@ Aligns children of selected element using flexbox.
   justify-content: center;
   -ms-flex-pack: center; }
 
-.stripe--hero-content {
+.stripe-heroContent {
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -864,6 +864,9 @@ html, body {
   margin: 0;
   padding: 0; }
 
+body {
+  position: relative; }
+
 /* {{{ Inline tag defaults */
 abbr, strong, acronym, span, small, time, strike, sub, sup, a {
   display: inline; }
@@ -910,11 +913,6 @@ img {
     /* assuming we're sizing an img down on the client */
     -ms-interpolation-mode: bicubic;
     image-rendering: optimizeQuality; }
-
-ul, ol {
-  list-style-position: outside;
-  padding-left: 1.33em;
-  /* indent by default */ }
 
 li {
   margin: 0;
@@ -1117,6 +1115,57 @@ a {
 
 /*doc
 ---
+title: Bulleted lists
+name: bulletedList
+parent: typesetting
+---
+
+`<ul>` and `<ol>` element list styles are
+reset by default.
+
+```html_example
+<ul>
+	<li>Eggs</li>
+	<li>More Eggs</li>
+</ul>
+```
+
+List style bullets are applied when list
+elements are inside a `.runningText` container.
+
+```html_example
+<div class="runningText">
+	<ul>
+		<li>Eggs</li>
+		<li>More Eggs</li>
+	</ul>
+</div>
+```
+
+You may also use the `.bullets` class to apply
+numbers/bullets to a list.
+
+```html_example
+<ul class="bullets">
+	<li>Eggs</li>
+	<li>More Eggs</li>
+</ul>
+```
+
+*/
+ul.bullets, .runningText ul, ol.bullets, .runningText ol {
+  list-style-position: outside;
+  padding-left: 1.33em;
+  /* indent by default */ }
+
+ul.bullets, .runningText ul {
+  list-style-type: disc; }
+
+ol.bullets, .runningText ol {
+  list-style-type: decimal; }
+
+/*doc
+---
 title: Typesetting
 name: typesetting
 category: Core
@@ -1200,6 +1249,7 @@ Display text for header hero elements.
 @media only screen and (max-width: 440px) {
   .text--display {
     font-size: 32px; } }
+ul, ol,
 .list--reset {
   list-style: none;
   padding-left: 0; }
@@ -1692,38 +1742,41 @@ Class                | Description
 `.stripe--inverted`  |  applies the standard `$C_contentBGInverted` background color
 `.stripe--collection`|  applies a light gray background; for use with card collections
 `.stripe--hero`      |  for hero header stripes
+`.stripe--photoHero` |  for hero header stripes; adds text protection
 */
+.stripe--collection, .stripe--inverted, .stripe--hero, .stripe--photoHero,
 .stripe {
   overflow: hidden;
   border-top: 1px solid rgba(0, 0, 0, 0.12);
-  background-color: #fff; }
+  background-color: #fff;
+  margin-bottom: 0; }
 
 .stripe--collection {
-  background: #F3F6F9; }
+  background-color: #F3F6F9; }
 
 .stripe--inverted {
-  background: #353E48; }
+  background-color: #353E48; }
 
-.stripe--hero {
+.stripe--hero, .stripe--photoHero {
   background-color: #d55741;
   background-size: cover;
   background-position: center 20%;
   background-repeat: no-repeat;
   border-top: none;
-  margin-bottom: 0;
   overflow: hidden;
   position: relative; }
-  .stripe--hero:before {
-    background-color: rgba(15, 20, 31, 0);
-    background-image: -webkit-linear-gradient(rgba(15, 20, 31, 0) 0%, rgba(15, 20, 31, 0.1) 50%, rgba(15, 20, 31, 0.8) 100%);
-    background-image: linear-gradient(rgba(15, 20, 31, 0) 0%, rgba(15, 20, 31, 0.1) 50%, rgba(15, 20, 31, 0.8) 100%);
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    z-index: 0;
-    top: 0; }
+
+.stripe--photoHero:before {
+  background-color: rgba(15, 20, 31, 0);
+  background-image: -webkit-linear-gradient(rgba(15, 20, 31, 0) 0%, rgba(15, 20, 31, 0.1) 50%, rgba(15, 20, 31, 0.8) 100%);
+  background-image: linear-gradient(rgba(15, 20, 31, 0) 0%, rgba(15, 20, 31, 0.1) 50%, rgba(15, 20, 31, 0.8) 100%);
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 0;
+  top: 0; }
 
 /*doc
 ---
@@ -1979,76 +2032,208 @@ Class                   | Description
 .lt--IE9 .row-item--shrink {
   width: auto; }
 
-body {
-  position: relative; }
-
 /*doc
 ---
 title: Views
 name: views
 category: Core
 ---
-*/
-/*doc
----
-title: View hero
-name: hero
-parent: views
----
+A "view" contains all layout and content for a given screen.
+Typically, a document only has a single view. Split views,
+where a document contains two view elements are possible (see below).
 
-```html_example
-<header class="stripe--hero" style="background-image: url(http://photos4.meetupstatic.com/photos/event/9/7/7/2/600_432758770.jpeg);">
-	<div class="bounds stripe--hero-content inverted">
-		<h1 class="text--display">Hero header heading</h1>
-	</div>
-</header>
+A class of `.view` is required for view elements; the
+following classes are optional variants:
+
+Class                  | Description
+---------------------- | ---------------------------
+`view--splitList`      | Sets view to "list style" when viewport is wide enough
+`view--splitDetail`    | Sets view to "detail style" when viewport is wide enough
+`view--dimmed`         | Dims view (for use with modal overlays)
+
+## Basic view (<a class="link" href="pages/basic-view.html">Demo</a>)
+Basic example of a single view in a document:
+
+```
+<div class="view">
+	<header class="view-head">
+		... view-head ...
+	</header>
+	<main class="view-body">
+		... view-body ...
+	</main>
+</div>
+```
+
+## Split view (DEMO TK)
+Basic example of two views in one document, where we specify
+which view has the "list" responsibility, and which view has
+the "detail" responsibility.
+
+```
+<div class="view view--splitList">
+	<header class="view-head">
+		... view-head ...
+	</header>
+	<main class="view-body">
+		... view-body ...
+	</main>
+</div>
+
+<div class="view view--splitDetail">
+	<header class="view-head">
+		... view-head ...
+	</header>
+	<main class="view-body">
+		... view-body ...
+	</main>
+</div>
 ```
 */
-.stripe--hero-content {
-  min-height: 384px;
-  position: relative; }
-  @media only screen and (max-width: 640px) {
-    .stripe--hero-content {
-      min-height: 240px; } }
+.view--splitList, .view--splitDetail {
+  display: none; }
+  .focus.view--splitList, .focus.view--splitDetail {
+    display: block; }
+  @media only screen and (min-width: 640px) {
+    .view--splitList, .view--splitDetail {
+      width: 320px;
+      display: block; } }
 
 .view {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   background: white;
   width: 100%;
   min-height: 100vh;
+  padding-top: 48px; }
+
+.view--splitList {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 320px;
+  border-right: 1px solid rgba(0, 0, 0, 0.12); }
+
+.view--splitDetail {
+  padding-left: 320px; }
+
+.view--dimmed {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+  background: rgba(0, 0, 0, 0.75);
+  opacity: 1; }
+
+.view--dimmed-close {
+  -webkit-transition: all 0.15s 0.15s;
+  transition: all 0.15s 0.15s;
+  display: block;
+  height: 100vh;
+  left: 0;
+  line-height: 100vh;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  vertical-align: middle;
+  width: 100%; }
+
+/*doc
+---
+title: View Head
+name: viewHead
+parent: views
+---
+The `view-head` element is the first child (the
+fixed top nav bar) within every view.
+
+TODO: view-head inner layout TK
+
+```
+<div class="view">
+	<header class="view-head">
+	</header>
+</div>
+```
+
+## view-head variants
+A class of `.view-head` is required for view headers. The following classes
+are optional variants (most likely added/removed with javascript to accommodate
+hero headers).
+
+Class                      | Description
+-------------------------- | ---------------------------
+`.view-head--transparent`  | Makes view header transparent; hides `h1` heading
+`.view-head--photoOverlay` | Same as 'transparent' variant, but adds text protext gradient
+
+*/
+.view-head {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-  .view.has-hero {
-    padding-top: 0; }
-  .view.view--split, .view.view--detail {
-    display: none; }
-    .view.view--split.focus, .view.view--detail.focus {
-      display: block; }
-  @media only screen and (min-width: 640px) {
-    .view.view--split, .view.view--detail {
-      display: block; }
-      .view.view--split.off, .view.view--detail.off {
-        display: none; }
-    .view.view--split {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      width: 320px;
-      border-right: 1px solid rgba(0, 0, 0, 0.12); }
-      .view.view--split .viewHead {
-        border-right: 1px solid rgba(0, 0, 0, 0.12);
-        width: 320px; }
-      .view.view--split .viewBody {
-        height: 100vh;
-        overflow: auto; }
-    .view.view--detail {
-      padding-left: 320px; }
-      .view.view--detail .viewHead {
-        left: 320px;
-        right: 0;
-        width: auto; }
-        .view.view--detail .viewHead .viewHead-back {
-          display: none; } }
+  box-sizing: border-box;
+  background: #d55741;
+  color: white;
+  height: 48px;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1; }
+
+.view--splitList .view-head {
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
+  width: 320px; }
+.view--splitDetail .view-head {
+  left: 320px;
+  right: 0;
+  width: auto; }
+
+.view-head--transparent {
+  background: transparent;
+  border-bottom: none;
+  color: white; }
+  .view-head--transparent h1 {
+    opacity: 0; }
+
+.view-head--photoOverlay {
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.6), transparent);
+  background: linear-gradient(rgba(0, 0, 0, 0.6), transparent); }
+
+/*doc
+---
+title: View Body
+name: viewBody
+parent: views
+---
+The `view-body` element is our main
+content container for the view.
+
+```
+<div class="view">
+	<main class="view-body">
+		... stripes, bounds, etc ...
+		... all content ...
+	</main>
+</div>
+```
+*/
+.view-body .stripe:first-child {
+  padding-top: 48px; }
+
+.view--splitList .view-body {
+  height: 100vh;
+  overflow: auto; }
+
+.stripe-heroContent {
+  min-height: 384px;
+  position: relative; }
+  @media only screen and (max-width: 640px) {
+    .stripe-heroContent {
+      min-height: 240px; } }
 
 .view--modal-full {
   -webkit-transform: translate3d(0, 0, 0);
@@ -2105,101 +2290,6 @@ parent: views
         -webkit-transform: translateY(100vh);
         -ms-transform: translateY(100vh);
         transform: translateY(100vh); } }
-
-.viewBody .stripe:first-child {
-  padding-top: 48px; }
-
-.viewHead {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  background: #d55741;
-  color: white;
-  height: 48px;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1; }
-  .viewHead .bounds--standard {
-    display: block; }
-  .viewHead .bounds--search {
-    display: none; }
-  .viewHead.viewHead--search .bounds--standard {
-    display: none; }
-  .viewHead.viewHead--search .bounds--search {
-    display: block; }
-  .viewHead .bounds {
-    padding: 0 16px; }
-  .viewHead .bounds, .viewHead .ffbox {
-    height: 100%; }
-  .viewHead h1 {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis; }
-  .viewHead .viewHead-back {
-    width: 24px; }
-  .viewHead .viewHead-heading {
-    padding-left: 8px; }
-  .viewHead .viewHead-actions {
-    padding: 0 !important;
-    white-space: nowrap; }
-    .viewHead .viewHead-actions a {
-      box-sizing: border-box;
-      display: inline-block;
-      padding: 0 8px; }
-      .viewHead .viewHead-actions a:last-child {
-        padding-right: 0; }
-  .viewHead.has-hero {
-    background: transparent;
-    border-bottom: none;
-    color: white; }
-    .viewHead.has-hero h1 {
-      opacity: 0; }
-  .viewHead.has-hero.has-hero-photo {
-    background: -webkit-linear-gradient(rgba(0, 0, 0, 0.6), transparent);
-    background: linear-gradient(rgba(0, 0, 0, 0.6), transparent); }
-
-.viewHead--search {
-  display: none;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #d55741; }
-
-.view--searchMode .viewHead--search {
-  display: block; }
-.view--searchMode .viewBody {
-  display: none; }
-
-.shade {
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 2;
-  -webkit-transition: all 0.15s;
-  transition: all 0.15s;
-  background: rgba(0, 0, 0, 0.75);
-  opacity: 1; }
-  .shade .x {
-    -webkit-transition: all 0.15s 0.15s;
-    transition: all 0.15s 0.15s;
-    display: block;
-    height: 100vh;
-    left: 0;
-    line-height: 100vh;
-    position: fixed;
-    text-align: center;
-    top: 0;
-    vertical-align: middle;
-    width: 100%; }
-  .shade.off {
-    opacity: 0; }
-    .shade.off .x {
-      opacity: 0; }
 
 /*doc
 ---
