--- a/css/doc.css
+++ b/css/doc.css
@@ -72,6 +72,13 @@ main > h3 {
 	margin-bottom: 4px;
 }
 
+main > h3,
+main > h4,
+main > h5,
+main > h6 {
+	font-weight: bold;
+}
+
 main > p,
 main > table {
 	margin-bottom: 18px;
