--- a/css/sassquatch.css
+++ b/css/sassquatch.css
@@ -1683,7 +1683,97 @@ _Can be used in combination with any other component
 
 /*doc
 ---
-title: Flex Row
+title: Stack
+name: stack
+category: Layout
+---
+The `stack` layout tool is for elements that
+should be stacked in a column at small sizes,
+and spreads across horizontal space at a given
+breakpoint.
+
+```html_example
+<div class="stack atLarge_stack--spread">
+	<div class="stack-item _DOC-SHADE">
+		<p>Stack Item</p>
+	</div>
+	<div class="stack-item _DOC-SHADE">
+		<p>Stack Item</p>
+	</div>
+</div>
+```
+
+## Stack variants
+A class of `stack` on the parent element is required.
+Collapsing of the stack doesn't happen at any viewport
+size by default, so __you must specify a spread point__
+with one of the following classes.
+
+Class                       | Description
+--------------------------- | ----------------------------------
+`atMedium_stack--spread`    | Spreads out the stack elements horizontally at `medium` breakpoint
+`atLarge_stack--spread`     | Spreads out the stack elements horizontally at `large` breakpoint
+
+
+*/
+.stack {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  box-orient: horizontal;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-direction: row;
+  -webkit-box-pack: start;
+  box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
+  -webkit-box-align: flex;
+  box-align: flex;
+  -webkit-align-items: flex;
+  -ms-align-items: flex;
+  align-items: flex;
+  -ms-flex-align: flex; }
+
+.stack-item {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+  -ms-flex-positive: 1;
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  -ms-flex-preferred-size: 100%; }
+
+@media only screen and (min-width: 640px) {
+  .atMedium_stack--spread .stack-item {
+    -webkit-flex-basis: 0;
+    flex-basis: 0;
+    -ms-flex-preferred-size: 0;
+    padding-left: 16px; }
+    .atMedium_stack--spread .stack-item:first-child {
+      padding-left: 0; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_stack--spread .stack-item {
+    -webkit-flex-basis: 0;
+    flex-basis: 0;
+    -ms-flex-preferred-size: 0;
+    padding-left: 16px; }
+    .atLarge_stack--spread .stack-item:first-child {
+      padding-left: 0; } }
+/*doc
+---
+title: Row
 name: flexRow
 category: Layout
 ---
@@ -2176,15 +2266,6 @@ the "detail" responsibility.
 </div>
 ```
 */
-.view--splitList, .view--splitDetail {
-  display: none; }
-  .focus.view--splitList, .focus.view--splitDetail {
-    display: block; }
-  @media only screen and (min-width: 640px) {
-    .view--splitList, .view--splitDetail {
-      width: 320px;
-      display: block; } }
-
 .view {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -2192,17 +2273,24 @@ the "detail" responsibility.
   width: 100%;
   min-height: 100vh; }
 
-.view--splitList {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 320px;
-  border-right: 1px solid rgba(0, 0, 0, 0.12); }
+.view--splitList, .view--splitDetail {
+  display: none; }
+  .view--splitList.focus, .view--splitDetail.focus {
+    display: block; }
 
-.view--splitDetail {
-  padding-left: 320px; }
+@media only screen and (min-width: 640px) {
+  .view--splitList {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 320px;
+    border-right: 1px solid rgba(0, 0, 0, 0.12);
+    display: block; }
 
+  .view--splitDetail {
+    display: block;
+    padding-left: 320px; } }
 .view--dimmed {
   height: 100%;
   left: 0;
@@ -2274,14 +2362,14 @@ Class                      | Description
     .view-head {
       height: 64px; } }
 
-.view--splitList .view-head {
-  border-right: 1px solid rgba(0, 0, 0, 0.12);
-  width: 320px; }
-.view--splitDetail .view-head {
-  left: 320px;
-  right: 0;
-  width: auto; }
-
+@media only screen and (min-width: 640px) {
+  .view--splitList .view-head {
+    border-right: 1px solid rgba(0, 0, 0, 0.12);
+    width: 320px; }
+  .view--splitDetail .view-head {
+    left: 320px;
+    right: 0;
+    width: auto; } }
 .view-head--transparent {
   background: transparent;
   border-bottom: none;
@@ -2350,6 +2438,7 @@ content container for the view.
   left: 50%;
   margin-left: -220px;
   margin-top: 10vh;
+  min-height: 0;
   position: absolute;
   width: 440px;
   z-index: 3; }
