--- a/css/doc.css
+++ b/css/doc.css
@@ -27,6 +27,7 @@ pre {
 	border: 1px solid rgba(0,0,0,.12);
 	box-shadow: 0 0 20px rgba(0,0,0,.12);
 	margin-bottom: 32px;
+	overflow: hidden;
 }
 .exampleOutput {
 	padding: 12px;
@@ -102,33 +103,31 @@ main > table td:first-child {
 }
 
 /* LAYOUT */
-#hologramBody > nav {
-	flex-basis: 280px;
-}
+/* LOL TK */
 
 /* NAV */
-#hologramBody > nav h4 {
+#navigation h4 {
 	margin-bottom: 8px;
 }
-#hologramBody > nav ul {
+#navigation ul {
 	list-style: none;
 	padding: 0;
 	margin-bottom: 12px;
 }
-#hologramBody > nav li > a { /* all menu items */
+#navigation li > a { /* all menu items */
 	display: block;
 	padding: 6px;
 	margin: 4px 0;
 }
-#hologramBody > nav li > a:hover {
+#navigation li > a:hover {
 	background: #E6E9EC;
 }
 
-#hologramBody > nav > ul > li > a { /* categories */
+#navigation > ul > li > a { /* categories */
 	font-size: 18px;
 	margin-bottom: 8px;
 }
-#hologramBody > nav li ul a { /* components */
+#navigation li ul a { /* components */
 	margin-left: 12px;
 	color: rgba(0,0,0,.54);
 }
