--- a/css/sassquatch.css
+++ b/css/sassquatch.css
@@ -2212,12 +2212,59 @@ each list item and right gutters between items.
 ```
 
 */
+.hscroll-content,
 .inlineblockList {
   margin: 0;
   padding: 0; }
+  .hscroll-content > li,
   .inlineblockList > li {
     display: inline-block;
     padding-right: 8px; }
+
+/*doc
+---
+title: Horizontal Scroll
+name: hscroll
+category: Layout
+---
+Applies styles for horizontal scrolling lists.
+
+```html_example
+<div class="hscroll">
+	<ul class="hscroll-content">
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+		<li><img src="https://placekitten.com/g/240/160" /></li>
+	</ul>
+</div>
+```
+
+*/
+.hscroll {
+  -webkit-overflow-scrolling: touch;
+  overflow: scroll;
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none; }
+  .hscroll::-webkit-scrollbar {
+    display: none; }
+
+.hscroll-content {
+  outline: 1px solid orange;
+  box-sizing: content-box;
+  padding-left: 16px;
+  padding-right: 16px;
+  white-space: nowrap; }
+  .hscroll-content > li {
+    white-space: normal; }
 
 /*doc
 ---
