--- a/css/sassquatch.css
+++ b/css/sassquatch.css
@@ -1933,12 +1933,43 @@ Applies styles for horizontal scrolling lists.
 </div>
 ```
 
+## Media-conditional `hscroll`
+It's possible to create an `hscroll` for small screens that expands
+into a non-scrolling list in the document flow for larger screens.
+
+```html_example
+<div class="hscroll atMedium_hscroll--unclip">
+	<ul class="hscroll-content">
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+		<li><img src="https://placekitten.com/g/92/56" /></li>
+	</ul>
+</div>
+```
+
+A class of `hscroll` is __required__; the following classes are
+optional variants:
+
+Class                       | Description
+--------------------------- | ----------------------------------
+`atMedium_hscroll--unclip`  | Allows visible overflow (as inline block list) at medium & up
+`atLarge_hscroll--unclip`  | Allows visible overflow (as inline block list) at large & up
+
 */
 .hscroll {
   -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: none;
   overflow: scroll;
-  overflow: -moz-scrollbars-none;
-  -ms-overflow-style: none; }
+  overflow: -moz-scrollbars-none; }
   .hscroll::-webkit-scrollbar {
     display: none; }
 
@@ -1950,6 +1981,22 @@ Applies styles for horizontal scrolling lists.
   .hscroll-content > li {
     white-space: normal; }
 
+@media only screen and (min-width: 640px) {
+  .atMedium_hscroll--unclip {
+    -webkit-overflow-scrolling: auto;
+    -ms-overflow-style: auto;
+    overflow: visible; }
+    .atMedium_hscroll--unclip .hscroll-content {
+      white-space: normal;
+      padding: 0; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_hscroll--unclip {
+    -webkit-overflow-scrolling: auto;
+    -ms-overflow-style: auto;
+    overflow: visible; }
+    .atLarge_hscroll--unclip .hscroll-content {
+      white-space: normal;
+      padding: 0; } }
 /*doc
 ---
 title: Chunk
@@ -3307,13 +3354,28 @@ title: Alignment
 name: alignMod
 category: Modifier Classes
 ---
-Modifies text-align property of element
+Modifies text-align property of element.
+
+__Applies `!important` declaration__
+
+## Horizontal text alignment
 
 Class             | Description
 ----------------- | --------------------------------
 `.align--center`  | sets `text-align` to `center`
 `.align--right`   | sets `text-align` to `right`
 `.align--left`    | sets `text-align` to `left`
+
+## Vertical alignment
+_These classes only work on flex children (`row-item`, `stack-item`),
+elements with `display: table-cell`, and elements displayed `inline-block`._
+
+Class                    | Description
+------------------------ | --------------------------------
+`.valign--baseline`      | sets `vertical-align` to `baseline`
+`.valign--bottom`        | sets `vertical-align` to `bottom`
+`.valign--middle`        | sets `vertical-align` to `middle`
+`.valign--top`           | sets `vertical-align` to `top`
 
 */
 .align--left {
@@ -3324,6 +3386,18 @@ Class             | Description
 
 .align--center {
   text-align: center !important; }
+
+.valign--baseline {
+  veritcal-align: baseline !important; }
+
+.valign--bottom {
+  veritcal-align: bottom !important; }
+
+.valign--middle {
+  veritcal-align: middle !important; }
+
+.valign--top {
+  veritcal-align: top !important; }
 
 /*doc
 ---
